raffia/tests/error/scss/value/interpolation/empty.snap
---
source: raffia/tests/error.rs
---
error: component value is expected
  ┌─ empty.scss:1:9
  │
1 │ $foo: #{};
  │         ^


